# WebScraping

./: ReadMe.md  Tecno.csv  extra_functions.py  locators.py  main.py  pyproject.toml
