[tool.poetry]
name = "webscrapping"
version = "0.1.0"
description = ""
authors = ["Ihor Kosenko <sotigor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.31.1"
pytest = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
